@@ -63,6 +63,7 @@ approximate Gromacs release numbers are listed in the table
    112        26             2018                 yes
    116        26             2019                 yes
    119        27             2020[*]_             yes
+   122        28             2021                 yes
    ========== ============== ==================== =====
 
 .. [*] Files generated by the beta versions of Gromacs 2020 are NOT supported.
