@@ -1,0 +1,21 @@
+DOPC BILAYER
+18
+    1TEST   T1    1    4.446   4.659   2.384
+    2TEST   T2    1    4.446   4.659   2.384
+    3TEST   T3    1    4.446   4.659   2.384
+    4TEST   T4    1    4.446   4.659   2.384
+    5TEST   T5    1    4.446   4.659   2.384
+    6TEST   T6    1    4.446   4.659   2.384
+    7TEST   T7    1    4.446   4.659   2.384
+    8TEST   T8    1    4.446   4.659   2.384
+    9TEST   T9    1    4.446   4.659   2.384
+   10TEST   T10   1    4.446   4.659   2.384
+   11TEST   T11   1    4.446   4.659   2.384
+   12TEST   T12   1    4.446   4.659   2.384
+   13TEST   T13   1    4.446   4.659   2.384
+   14TEST   T14   1    4.446   4.659   2.384
+   15TEST   T15   1    4.446   4.659   2.384
+   16TEST   T16   1    4.446   4.659   2.384
+   17TEST   T17   1    4.446   4.659   2.384
+   18TEST   T18   1    4.446   4.659   2.384
+7.02505   7.02505   8.39403
