@@ -1,0 +1,256 @@
+; This topology describes a system with a test molecule that intends to
+; use all the bonded interactions available in gromacs.
+; Most of the parameter values make no sense; here only the presence of the
+; interaction in the final TPR matters.
+
+[ defaults ]
+2 1
+
+[ atomtypes ]
+; name mass charge ptype a b b
+TA     72.0 0.000  A     1 1 1
+TS     72.0 0.000  S     1 1 1
+
+[ implicit_genborn_params ]
+; atom-type sar st pi gbr htc
+TA          1   1  1  1   1
+TS          1   1  1  1   1
+
+[ cmaptypes ]
+TS TA TA TA TA 1 24 24\
+0.53048936 3.2162408 4.06375184 5.23405848 8.87430584 11.27767912 8.63761696 7.38388136 3.16256008 -2.98515848\
+4.08412792 -10.35757568 -22.8264396 -21.3235468 -22.1996764 -16.63403592 -12.92261872 -11.6490928 -11.20107008 -11.07111504\
+-9.7711044 -8.41168096 -6.72803936 -2.017734 -3.35678136 5.76174456 6.59825168 7.83366136 10.03737416 10.29945992\
+9.76478656 7.96662888 4.44114864 2.1689856 -0.48668288 -14.95964096 -22.11026432 -21.59073704 -17.55610584 -13.70766264\
+-11.36098256 -7.5571408 -4.60984752 -5.06397888 -4.22086104 -2.6656264 -6.70845824 -7.43442408 -2.65604504 4.83758264\
+6.7962804 8.5654848 11.10395944 11.26085944 9.60822128 8.2025228 5.54350712 8.52820536 -4.81791784 -13.17378424\
+-16.97984352 -18.9612604 -15.88401208 -10.76162456 -7.226814 -4.02253944 -1.18369544 -2.00463808 -4.34859856 -6.76996304\
+-7.21932464 -5.75869024 0.895376 6.36541208 8.27360896 9.9493428 12.25690248 12.10602744 10.19142904 9.04986648\
+7.370116 4.97933656 -5.09866424 -8.8236376 -12.4520024 -14.24794256 -11.58315296 -7.68194952 -4.0080628 0.09116936\
+-0.13706784 -2.78604192 -5.52777528 -5.07234688 -3.73702328 -3.75321536 3.6566068 8.19712544 10.49761416 11.8871624\
+15.47644864 13.84623672 10.9382312 10.38351648 11.27445744 4.52892896 -1.66657088 -7.3713712 -12.32234024 -13.78498296\
+-9.6579272 -3.57932832 -0.36534688 1.83694336 2.89482592 -2.45320472 -4.29784664 -4.08626176 -1.95635472 0.43521968\
+7.39471792 9.5673436 11.79063752 12.826052 14.10267408 14.21488896 11.42361704 12.04485736 10.63576984 6.46528416\
+-0.3855556 -7.08953696 -11.76670504 -11.72536712 -7.76701024 -1.28130816 -0.51228896 1.86054112 3.3896676 -0.24530792\
+-1.13089336 -0.74822472 0.84667424 2.06610104 6.09194584 11.47746512 10.8342588 12.74542632 14.44111784 13.88736544\
+12.7733336 16.20764448 10.1279996 3.9710344 0.03502008 -5.78638832 -8.94928312 -8.73359792 -5.3065672 -2.06844408\
+1.11955472 3.800118 2.24898368 1.28139184 0.29095536 0.40777264 1.10064304 2.52387248 5.84416936 14.01259256\
+9.12496928 12.31334464 15.95806888 15.3795472 14.87541704 16.26442136 8.79167184 -0.79889296 -3.06369216 -5.78245536\
+-2.81951392 -3.41995976 -3.46008432 -0.4677712 0.22472264 1.2401376 2.89633216 1.79476864 -0.1510424 -0.14150288\
+-0.8129512 1.67447864 1.0319836 5.14623632 7.18376064 13.25729688 17.60706696 18.27094224 17.78651872 14.00849224\
+4.17370736 -5.38706736 -4.9367016 -2.8631112 -3.57171344 -4.84825184 -1.4541492 0.48036504 1.0158752 1.34900528\
+1.54866576 -1.5687908 -2.83231696 -5.53723112 -5.7180636 -0.91533368 -5.00711832 0.32660304 9.82156344 17.6202884\
+22.493184 22.44690896 18.2221568 10.19435784 1.70903848 -2.47207456 -1.82405664 -2.09706264 -3.44021032 -2.54056664\
+0.24229544 1.03169072 -0.29526488 1.58753512 1.03666968 -2.39190912 -5.36769544 -7.17878168 -7.69780688 -8.31406824\
+-4.91502848 4.46445352 17.49104464 28.20689624 25.40010168 20.00567048 11.54089456 5.42166904 2.3896916 -0.82207232\
+1.05378224 -3.06327376 5.39468224 6.26591656 7.9100612 9.19848216 0.70830936 2.234256 1.38816752 -5.34012288\
+-10.66949288 -13.8580356 -13.12382728 -11.05521584 1.22838056 23.38048488 15.61728208 13.46252208 13.6919308 10.42786688\
+6.5425208 5.67668384 3.47861944 2.63663128 6.66080248 3.43891328 2.03371688 2.99473984 4.16734768 6.65917072\
+-1.5372016 0.76052568 -2.56864128 -9.4888936 -14.71286864 -15.0527768 -12.73333456 -7.38484368 11.85038504 3.29695016\
+1.35260352 2.00509832 2.6300624 4.08496472 5.18293 6.9954388 6.88468832 10.54510256 6.72356248 3.2482484\
+0.50115952 0.29451176 0.50697528 -6.56565832 -5.07523384 -7.72517024 -11.48302984 -15.86794552 -16.46353792 -15.12905112\
+-11.195338 -3.86672728 -3.25657456 -8.00265312 -8.58615376 -7.72483552 -4.38244712 0.7673456 7.0414628 9.303124\
+5.68342008 10.24519344 6.01207328 2.83913688 -0.99185904 -2.23977888 -3.30694992 -9.13191472 -13.60276976 -17.55234024\
+-17.86262568 -16.35195064 -14.45831408 -11.60629048 7.34446808 1.31130744 -12.40058104 -14.57592632 -14.71546272 -11.40081424\
+-5.88065384 1.4066608 5.9766348 5.83513192 4.06002808 10.30402048 6.36984712 2.31634608 -1.70447792 -6.2046628\
+-15.12064128 -17.40464504 -20.69230672 -20.01642336 -15.75083536 -12.38104176 -8.2167484 -4.48215184 -6.69264272 -10.23121888\
+-16.85762888 -16.45424944 -14.88868032 -10.51849232 -4.34014688 1.514608 3.40736592 3.15519624 2.10191608 7.96390928\
+3.22260048 -1.74230128 -13.74992104 -16.21412968 -20.5342352 -23.86733512 -23.62144144 -18.39303136 -11.9890428 -9.90842328\
+-11.96829016 -14.29488704 -15.34059416 -16.14634888 -13.96732168 -12.38556048 -9.6721528 -5.32577176 -1.03123048 3.02340024\
+2.79520488 1.83313592 10.02206072 6.83025448 -8.5414268 -13.4645304 -16.38069472 -20.30290184 -23.834156 -26.41932408\
+-23.78055896 -17.44987408 -13.141944 -14.68090288 -15.71690312 -15.23314904 -15.23155912 -14.85608696 -9.39249424 -6.8287064\
+-4.18667776 -0.71312096 2.20262496 3.44640264 2.16371376 -0.05489408 -1.55188744 -5.07820448 -9.6468396 -14.31170672\
+-18.76507264 -23.82009776 -25.9372436 -26.16619208 -21.80412104 -17.46560592 -15.4186676 -17.36929024 -17.41368248 -15.5860276\
+-15.54485704 -10.90668384 -7.19999456 -4.92804072 -1.79255112 1.16202232 3.3802536 3.36083984 2.01882184 -1.4095896\
+-3.28975368 -7.42270888 -11.68683248 -16.01869504 -21.8061712 -27.7685804 -29.24590896 -25.5592192 -22.81288344 -16.3655068\
+-18.079064 -19.19301216 -17.16532024 -15.78547888 -13.2101432 -11.08086376 -7.74307776 -4.57068528 -1.86196368 0.53760216\
+4.20709568 3.70208688 2.0327964 -0.91407848 -3.58849128 -7.03886872 -12.6122496 -18.74896424 -25.32788584 -28.7248336\
+-28.74880792 -23.96695616 -16.36877032 -20.09202824 -21.06493376 -19.73170216 -19.25091872 -17.09674448 -13.70105192 -10.08737296\
+-8.23925832 -4.6720636 -2.260406 -0.62898072 3.19456768 4.34671576 3.17348032 1.31180952 -1.3934812 -7.83566968\
+-14.08447368 -20.95455984 -25.62620504 -29.43372872 -28.13455488 -15.4816368 -18.87243408 -21.6967596 -22.43301808 -20.28189816\
+-18.59503488 -16.75382384 -14.29137248 -11.51114632 -8.83347 -4.89092864 -1.35055336 -0.02895328 1.32490544 4.54495368\
+3.92948728 2.61642256 -0.69605024 -7.65801704 -14.51626248 -20.69418952 -25.57495104 -8.01478672 -16.93394504 -20.90636016\
+-20.90631832 -20.26181496 -20.44561808 -17.99345936 -18.80549008 -18.58620664 -17.42037688 -13.31980584 -7.35375656 -1.68874608\
+0.10008128 1.51623976 2.65483168 5.29242528 5.69593024 3.96818928 -0.30827712 -6.20721504 -13.19139888 7.67814208\
+-7.37580624 -21.31187344 -24.03636872 -22.55205288 -20.01596312 -17.53359592 -17.21891728 -16.91289952 -17.26138488 -16.8554532\
+-16.8452024 -12.29221544 -3.39150856 -0.299156 1.58527576 2.27320904 5.34664992 6.86724104 7.10794656 6.3594708\
+2.6440788 -4.55499528 -11.44964152 -3.07624416 -19.09506472 -26.8125364 -24.6414588 -21.513082 -17.55175448 -15.34059416\
+-16.0809948 -15.97798472 -16.00873712 -15.04909488 -12.53020136 -9.33458768  
+
+[ moleculetype ]
+; molname  	nrexcl
+TEST 	    	1
+
+[ atoms ]
+;id 	type 	resnr 	residu 	atom 	cgnr 	charge   mass
+1       TS      1       T       T1      1       0
+2       TA      1       T       T2      1       0 
+3       TA      1       T       T3      1       0
+4       TA      1       T       T4      1       0 
+5       TA      1       T       T5      1       0 
+6       TA      1       T       T6      1       0 
+7       TA      1       T       T7      1       0
+8       TA      1       T       T8      1       0         0
+9       TA      1       T       T9      1       0         0
+10      TA      1       T       T10     1       0         0
+11      TA      1       T       T11     1       0
+12      TA      1       T       T12     1       0
+13      TA      1       T       T13     1       0         
+14      TA      1       T       T14     1       0         0
+15      TA      1       T       T15     1       0         0
+16      TA      1       T       T16     1       0         0
+17      TA      1       T       T17     1       0         0
+18	TA	1	T	T18	1	0	  0
+
+[ polarization ]
+; Atom i  j  type  alpha
+1         2  1     0.001
+; Atom i  j    type   alpha (nm^3)    delta  khyp
+3         4    2      0.001786        0.02   16.736e8
+
+[ water_polarization ]
+; Copied from share/gromacs/top/sw.itp
+; O H H D S funct  al_x	 al_y	  al_z	   	rOH	rHH	rOD
+  1 2 3 4 5 1	0.001415 0.001528 0.001468 	0.09572	0.15139 0.0137408
+
+[ thole_polarization ]
+;   i   j   k   l   function-number  thole-a-parameter   alpha_i  alpha_j
+    1   2   3   4   1                1                   1        1
+
+[ virtual_sites1 ]
+; Site  from        funct
+18       1           1
+
+[ virtual_sites2 ]
+; Site  from        funct  a
+14      1     2     1      0.7439756
+
+[ virtual_sites3 ]
+; Site  from               funct   a          b
+17      4     5     6      1       0.7439756  0.128012
+; Site  from               funct   a          d
+8       4     5     6      2       0.5        -0.105
+; Site  from               funct   theta      d
+9       4     5     6      3       120        0.5
+; Site  from               funct   a          b          c
+10      4     5     6      4       -0.4       -0.4       6.9281
+
+[ virtual_sites4 ]
+; Site  from                      funct   a          b          c
+16       1    2    3    4         2       1.0        0.9       0.105
+
+[ virtual_sitesn ]
+; Site   funct    from
+15        1        1     2     3     4
+
+[ pairs ]
+; i  j funct v w
+ 14 15 1     1 1
+; i  j funct fudgeQQ qi qj v w
+ 15 16 2     1       1  1  1 1
+
+[ pairs_nb ]
+; i  j funct qi qj v w
+ 16 17 1     1  1  1 1
+
+[ position_restraints ]
+; i funct kx ky kz
+  1 1     1  1  1
+; i funct g r k
+  2 2     1 1 1
+
+[ distance_restraints ]
+; i j funct type label low up1 up2 weight
+  3 4 1     1    1     1   1   1   1
+
+[ dihedral_restraints ]
+; i j k l funct phi0 delta-phi k
+  4 5 6 7 1     1    1         1
+
+[ orientation_restraints ]
+; i j funct exp label alpha c obs weigth
+  3 4 1     1   1     1     1 1   1
+
+[ angle_restraints ]
+; i j  k  l funct theta0 kc multiplicity
+  8 9 10 11 1     1      1  1
+
+[ angle_restraints_z ]
+; i j funct theta0 kc multiplicity
+  8 9 1     1      1  1
+
+[bonds]
+; i j 	funct 	length 	force.c.
+  1 2   1       0.470   1250        ; regular bond
+  2 3   2       0.470   1250        ; G96 bond
+; i j 	funct 	length 	D     beta
+  3 4   3       0.470   1250  0.1   ; Morse
+; i j 	funct 	length 	C
+  4 5   4       0.470   1250 1250   ; cubic bond
+; i j   funct
+  5 6   5                           ; connection
+; i j 	funct 	length 	force.c.
+  6 7   6       0.470   1250        ; harmonic potential
+  7 8   7       0.470   1250        ; FENE bond
+; i j   funct   low  up1  up2  kdr
+  8 9   10      1    2    3    1250 ; restraint potential
+; i  j   funct table.number force.c
+  9 10   8     0            1       ; tabulated
+ 10 11   9     0            1       ; tabulated no exclusion
+
+[constraints]
+; i  j   funct   length
+  11 12  1       0.470
+  12 13  2       0.470
+
+[angles]
+;  i     j    k     funct   angle  force.c.
+   1     2    3     1       30     1000      ; regular angle
+   2     3    4     2       30     1000      ; G96 angle
+;  i     j    k     funct   r1    r2   k
+   3     4    5     3       1     1    1     ; cross bond-bond
+;  i     j    k     funct   r1    r2   r3  k
+   4     5    6     4       1     1    1   1 ; cross bond-angle
+;  i     j    k     funct   tetha ktheta r13 kUB
+   5     6    7     5       1     1      1   1   ; Urey-Bradley
+;  i     j    k     funct   theta C0 C1 C2 C3 C4
+   6     7    8     6       1     1  1  1  1  1  ; quartic angle
+;  i     j    k     funct   klinA aA klinB aB
+  11    12   13     9       1     1  1     1     ; linear angle
+;  i     j    k     funct   theta ktheta
+   7     8    9     10      1     1          ; restricted bending potential
+;  i     j    k     funct   table.number force.c
+   8     9    10    8       0            1   ; tabulated angle
+
+[dihedrals]
+; i  j  k  l  funct
+  1  2  3  4  1     1 1 1             ; proper dihedrals (3 params)
+  2  3  4  5  1     1 1 1 1 1 1       ; proper dihedrals (6 params)
+  5  6  7  8  3     1 1 1 1 1 1       ; Ryckaert-Bellemans dihedral
+  7  8  9  10 5     1 1 1 1           ; Fourier dihedral
+  8  9  10 11 9     1 1 1             ; proper dihedral (multiple)
+  9  10 11 12 10    1 1 1 1           ; restricted dihedral
+  10 11 12 13 11    1 1 1 1 1 1       ; combined bending-torsion potential
+  11 12 13 14 8     0 1               ; tabulated dihedral
+
+[dihedrals]
+; i  j  k  l  funct
+  3  4  5  6  2     1 1               ; improper dihedrals (2 params)
+  4  5  6  7  2     1 1 1 1           ; improper dihedrals (4 params)
+  6  7  8  9  4     1 1 1 1 1 1       ; periodic improper dihedral
+
+[ cmap ]
+;  ai    aj    ak    al    am funct
+   1     2     3     4     5  1
+
+
+
+[ exclusions ] 
+; i others
+  1 13  14  15
+
+[system]
+Topology test
+
+[molecules]
+TEST  1
