@@ -33,8 +33,10 @@ from MDAnalysis.tests.datafiles import (
     TPR460, TPR461, TPR502, TPR504, TPR505, TPR510, TPR510_bonded,
     TPR2016, TPR2018, TPR2019B3, TPR2020B2, TPR2020, TPR2020Double,
     TPR2016_bonded, TPR2018_bonded, TPR2019B3_bonded,
-    TPR2020B2_bonded, TPR2020_bonded, TPR2020_double_bonded, TPR334_bonded,
-    TPR_EXTRA_2020, TPR_EXTRA_2018, TPR_EXTRA_2016, TPR_EXTRA_407,
+    TPR2020B2_bonded, TPR2020_bonded, TPR2020_double_bonded,
+    TPR2021_bonded, TPR2021_double_bonded, TPR334_bonded,
+    TPR_EXTRA_2021, TPR_EXTRA_2020, TPR_EXTRA_2018,
+    TPR_EXTRA_2016, TPR_EXTRA_407,
     XTC,
 )
 from MDAnalysisTests.topology.base import ParserBase
@@ -46,8 +48,11 @@ BONDED_TPRS = (
     TPR2016_bonded,
     TPR2018_bonded,
     TPR2019B3_bonded,
+    TPR2021_bonded,
+    TPR2021_double_bonded,
     TPR2020_bonded,
     TPR2020_double_bonded,
+    TPR_EXTRA_2021,
     TPR_EXTRA_2020,
     TPR_EXTRA_2018,
     TPR_EXTRA_2016,
